--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -4,7 +4,7 @@
 
   <ul class="d-flex list-unstyled">
     <% @letters.each do |letter| %>
-    <li class="card p-4 m-2 bg-primary text-white font-weight-bold shadow"> <%= letter %></li>
+    <li class="card p-4 m-2 bg-primary text-white font-weight-bold shadow" id="letter"> <%= letter %></li>
     <% end %>
   </ul>
 
