--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -3,8 +3,8 @@
   <h1>New Game</h1>
 
   <ul class="d-flex list-unstyled">
-    <% @letters.each do |letter| %>
-    <li class="card p-4 m-2 bg-primary text-white font-weight-bold shadow" id="letter"> <%= letter %></li>
+    <% @letters.each_with_index do |letter,index| %>
+    <li class="card p-4 m-2 bg-primary text-white font-weight-bold shadow" id="letter<%=index%>"> <%= letter %></li>
     <% end %>
   </ul>
 
